--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -12,7 +12,7 @@ DO NOT MODIFIY - GENERATED CODE
   <parent>
     <groupId>org.jruby</groupId>
     <artifactId>jruby-parent</artifactId>
-    <version>9.2.20.0-jfrog</version>
+    <version>9.2.20.1-jfrog</version>
   </parent>
   <artifactId>jruby-stdlib</artifactId>
   <name>JRuby Lib Setup</name>
@@ -28,7 +28,7 @@ DO NOT MODIFIY - GENERATED CODE
     <dependency>
       <groupId>org.jruby</groupId>
       <artifactId>jruby-core</artifactId>
-      <version>9.2.20.0-jfrog</version>
+      <version>9.2.20.1-jfrog</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -124,6 +124,19 @@ DO NOT MODIFIY - GENERATED CODE
     </dependency>
     <dependency>
       <groupId>rubygems</groupId>
+      <artifactId>jruby-openssl</artifactId>
+      <version>0.10.7</version>
+      <type>gem</type>
+      <scope>provided</scope>
+      <exclusions>
+        <exclusion>
+          <artifactId>jar-dependencies</artifactId>
+          <groupId>rubygems</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>rubygems</groupId>
       <artifactId>json</artifactId>
       <version>${json.version}</version>
       <type>gem</type>
@@ -138,7 +151,7 @@ DO NOT MODIFIY - GENERATED CODE
     <dependency>
       <groupId>rubygems</groupId>
       <artifactId>psych</artifactId>
-      <version>3.2.0</version>
+      <version>3.3.1</version>
       <type>gem</type>
       <scope>provided</scope>
       <exclusions>
@@ -319,8 +332,9 @@ DO NOT MODIFIY - GENERATED CODE
           <include>specifications/ipaddr-1.2.0*</include>
           <include>specifications/jar-dependencies-${jar-dependencies.version}*</include>
           <include>specifications/jruby-readline-1.3.7*</include>
+          <include>specifications/jruby-openssl-0.10.7*</include>
           <include>specifications/json-${json.version}*</include>
-          <include>specifications/psych-3.2.0*</include>
+          <include>specifications/psych-3.3.1*</include>
           <include>specifications/racc-1.5.2*</include>
           <include>specifications/rake-ant-1.0.4*</include>
           <include>specifications/rdoc-${rdoc.version}*</include>
@@ -339,8 +353,9 @@ DO NOT MODIFIY - GENERATED CODE
           <include>gems/ipaddr-1.2.0*/**/*</include>
           <include>gems/jar-dependencies-${jar-dependencies.version}*/**/*</include>
           <include>gems/jruby-readline-1.3.7*/**/*</include>
+          <include>gems/jruby-openssl-0.10.7*/**/*</include>
           <include>gems/json-${json.version}*/**/*</include>
-          <include>gems/psych-3.2.0*/**/*</include>
+          <include>gems/psych-3.3.1*/**/*</include>
           <include>gems/racc-1.5.2*/**/*</include>
           <include>gems/rake-ant-1.0.4*/**/*</include>
           <include>gems/rdoc-${rdoc.version}*/**/*</include>
@@ -359,8 +374,9 @@ DO NOT MODIFIY - GENERATED CODE
           <include>cache/ipaddr-1.2.0*</include>
           <include>cache/jar-dependencies-${jar-dependencies.version}*</include>
           <include>cache/jruby-readline-1.3.7*</include>
+          <include>cache/jruby-openssl-0.10.7*</include>
           <include>cache/json-${json.version}*</include>
-          <include>cache/psych-3.2.0*</include>
+          <include>cache/psych-3.3.1*</include>
           <include>cache/racc-1.5.2*</include>
           <include>cache/rake-ant-1.0.4*</include>
           <include>cache/rdoc-${rdoc.version}*</include>
